# hydrate-cage-identification

./: AlgCage.cpp  AlgCage.h  AlgCage_CageViaCup.cpp  Auxilaryfun.cpp  Auxilaryfun.h  CMakeLists.txt  GeneralCage.cpp  HBondedMol.cpp  HBondedMol.h  InOut.cpp  InOut.h  Makefile  Planes.cpp  Planes.h  PolygonAreas.cpp  README.md  main.cpp
